--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,11 @@
     "**/.DS_Store": true,
     "**/node_modules": true,
     "env*": true
+  },
+  "cSpell.words": ["GPIO", "GRBW", "rfile", "RGBW", "wfile"],
+  "[python]": {
+    "editor.detectIndentation": false,
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2
   }
 }
