--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@ Temporary Items
 
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
+
+server/src/firebaseConfig.ts
