--- a/server/package.json
+++ b/server/package.json
@@ -50,5 +50,10 @@
       ".(ts|tsx)": "ts-jest"
     },
     "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$"
+  },
+  "dependencies": {
+    "cross-fetch": "^3.1.4",
+    "firebase": "^9.6.1",
+    "node-fetch": "^3.1.0"
   }
 }
